# pico-freertos-sample

./: .gitignore
blink/: blink.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h
system_view/Config/: SEGGER_SYSVIEW_Config_FreeRTOS.c
system_view/Sample/FreeRTOS/Config/: SEGGER_SYSVIEW_Config_FreeRTOS.c
